<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <!-- First Header -->
        <TextView android:text="@string/first_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="32sp"
            android:textColor="@color/header_color" />

        <!-- Field 1 -->
        <TextView android:text="@string/first_field1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/form_label_padding_top"
            android:textColor="@color/label_color"/>

        <EditText android:id="@+id/input_field1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />


        <!-- Field 2 -->
        <TextView android:text="@string/first_field2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/form_label_padding_top"
            android:textColor="@color/label_color"/>

        <EditText android:id="@+id/input_field2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />


        <!-- Field 3 -->
        <TextView android:text="@string/first_field3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/form_label_padding_top"
            android:textColor="@color/label_color"/>

        <EditText android:id="@+id/input_field3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />


        <!-- Proceed button and required label -->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/form_label_padding_top">

            <TextView android:text="@string/field_required"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/first_proceed_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/first_proceed_button"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>